Fixed layout issue on input for sign-in form

--- a/public/styles/main_mobile.css
+++ b/public/styles/main_mobile.css
@@ -88,6 +88,10 @@
 	.home .testimonials {
 		clear: both;
 	}
+
+	input[type=text], input[type=email], input[type=password] {
+		width: 100%;
+	}
 }
 
 @media screen and (max-width: 480px) {
@@ -280,6 +284,10 @@
 	}
 
 	.gray-section .big-feature {
+		width: 100%;
+	}
+
+	input[type=text], input[type=email], input[type=password] {
 		width: 100%;
 	}
 }
